apps/django-backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-backend
  labels:
    name: django-backend
    app-type: backend
    framework: django
