apps/django-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-backend-service
  namespace: django-backend
  labels:
    app: django-backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: django-backend
