apps/django-backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: django-backend-route
  namespace: django-backend
  labels:
    app: django-backend
spec:
  host: django.apps.p-ai.net
  to:
    kind: Service
    name: django-backend-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
